--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
-    "react-icons": "^3.10.0",
+    "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -19,7 +19,6 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "tailwindcss": "^1.5.1",
     "uuid": "^8.0.0"
   },
   "scripts": {
