--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "tailwindcss": "^1.5.1",
     "uuid": "^8.0.0"
   },
   "scripts": {
